Some speed improvement for within every fill board

--- a/Constraint-Rule Unification.ipynb
+++ b/Constraint-Rule Unification.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "listed-placement",
+   "id": "continuous-gossip",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "funky-triple",
+   "id": "corporate-tradition",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bulgarian-border",
+   "id": "enormous-laundry",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "pressing-vietnam",
+   "id": "brazilian-hungarian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "common-melissa",
+   "id": "spiritual-movie",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "chemical-rwanda",
+   "id": "stainless-notification",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "careful-marks",
+   "id": "subsequent-chair",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "united-december",
+   "id": "rental-dialogue",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,8 +262,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "handled-feeling",
+   "execution_count": 18,
+   "id": "entire-microphone",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,72 +379,65 @@
     "        return [Board(b) for b in fill_no_within({self.space_object1: num_obj1, self.space_object2: num_obj2}, \\\n",
     "                                                 board, self.num_sectors)]\n",
     "   \n",
-    "    def _fill_board_every(self, board, num_objects, num_objects_left, start_i=0):\n",
-    "        # num_objects: how many should be on the board starting from start_i\n",
+    "    def _fill_board_every(self, board, num_obj1, num_objects_left, start_i=0):\n",
+    "        # num_obj1: how many should be on the board starting from start_i\n",
     "        # num_objects_left: how many still need to be placed\n",
-    "        num_obj1 = num_objects[self.space_object1]\n",
-    "        num_obj2 = num_objects[self.space_object2]\n",
-    "        \n",
     "        num_obj1_left = num_objects_left[self.space_object1]\n",
     "        num_obj2_left = num_objects_left[self.space_object2]\n",
     "                \n",
-    "        new_num_objects = num_objects.copy()\n",
     "        new_num_objects_left = num_objects_left.copy()\n",
     "\n",
     "        if num_obj1 == 0:\n",
     "            return [ board ]\n",
     "        \n",
+    "        board_size = len(board)\n",
+    "                \n",
     "        new_boards = []\n",
-    "        for i in range(start_i, len(board)):\n",
-    "            # Try to add obj1 \n",
-    "            # keep track of countdown until obj2 is needed\n",
-    "            # might have troouble with wraparound effects\n",
-    "            # try every obj2 position in radius\n",
-    "            # similar rules for adjacency: if between obj1s, must be on the right\n",
+    "        for i in range(start_i, board_size):\n",
     "            obj = board[i]\n",
-    "            is_obj1 = obj is self.space_object1 \n",
-    "            # Attempt to fill each position withna object1 is possible\n",
+    "            is_obj1 = obj is self.space_object1\n",
+    "            # Attempt to fill each position with an object1 is possible\n",
     "            if obj is None or is_obj1:\n",
     "                options = 0\n",
-    "                if self.space_object2 in board[i-self.num_sectors:i+self.num_sectors+1]:\n",
-    "                    # If there is already an obj2 in range, fill with obj1 and proceed\n",
-    "                    options += 1\n",
-    "                    board_copy = board.copy()\n",
-    "                    board_copy[i] = self.space_object1\n",
-    "                    new_num_objects[self.space_object1] = num_obj1 - 1\n",
-    "                    new_num_objects[self.space_object2] = num_obj2\n",
-    "                    new_num_objects_left[self.space_object1] = num_obj1_left - (not is_obj1)\n",
-    "                    new_num_objects_left[self.space_object2] = num_obj2\n",
-    "                    new_boards.extend(self._fill_board_every(board_copy, new_num_objects, new_num_objects_left, i+1))\n",
-    "                elif num_obj2_left > 0:\n",
-    "                    # Otherwise there must be obj2 left to use\n",
-    "                    for j in range(i-self.num_sectors, i):\n",
-    "                        if board[j] is None:\n",
-    "                            if not any(k >= 0 and board[k] is self.space_object1 for k in range(j-self.num_sectors, j)):\n",
-    "                                options += 1\n",
-    "                                board_copy = board.copy() \n",
-    "                                board_copy[i] = self.space_object1\n",
-    "                                board_copy[j] = self.space_object2\n",
-    "                                new_num_objects[self.space_object1] = num_obj1 - 1\n",
-    "                                new_num_objects[self.space_object2] = num_obj2 - 1\n",
-    "                                new_num_objects_left[self.space_object1] = num_obj1_left - (not is_obj1)\n",
-    "                                new_num_objects_left[self.space_object2] = num_obj2_left - 1\n",
-    "                                new_boards.extend(self._fill_board_every(board_copy, new_num_objects, new_num_objects_left, i+1))\n",
-    "                    \n",
-    "                    max_sector = min(i+self.num_sectors+1, len(board)+(i-self.num_sectors))\n",
-    "                    for j in range(i+1, max_sector):\n",
-    "                        if board[j] is None:\n",
-    "                            if not any(k < len(board) and board[k] is self.space_object1 for k in range(j+1, j+self.num_sectors+1)):\n",
-    "                                options += 1\n",
-    "                                board_copy = board.copy() \n",
-    "                                board_copy[i] = self.space_object1\n",
-    "                                board_copy[j] = self.space_object2\n",
-    "                                new_num_objects[self.space_object1] = num_obj1 - 1\n",
-    "                                new_num_objects[self.space_object2] = num_obj2 - 1\n",
-    "                                new_num_objects_left[self.space_object1] = num_obj1_left - (not is_obj1)\n",
-    "                                new_num_objects_left[self.space_object2] = num_obj2_left - 1\n",
-    "                                new_boards.extend(self._fill_board_every(board_copy, new_num_objects, new_num_objects_left, i+1))\n",
-    "        \n",
+    "                if is_obj1 or num_obj1_left > 0:\n",
+    "                    if self.space_object2 in board[i-self.num_sectors:i+self.num_sectors+1]:\n",
+    "                        # If there is already an obj2 in range, fill with obj1 and proceed\n",
+    "                        options += 1\n",
+    "                        board_copy = board.copy()\n",
+    "                        board_copy[i] = self.space_object1\n",
+    "                        new_num_objects_left[self.space_object1] = num_obj1_left - (not is_obj1)\n",
+    "                        new_num_objects_left[self.space_object2] = num_obj2_left\n",
+    "                        new_boards.extend(self._fill_board_every(board_copy, num_obj1 - 1, new_num_objects_left, i+1))\n",
+    "                    elif num_obj2_left > 0:\n",
+    "                        # Otherwise there must be obj2 left to use\n",
+    "                        for j in range(i-self.num_sectors, i):\n",
+    "                            if board[j] is None:\n",
+    "                                \n",
+    "                                if not any(k >= 0 and board[k] is self.space_object1 for k in range(max(0, j-self.num_sectors), j)):\n",
+    "                                    options += 1\n",
+    "                                    board_copy = board.copy() \n",
+    "                                    board_copy[i] = self.space_object1\n",
+    "                                    board_copy[j] = self.space_object2\n",
+    "                                    new_num_objects_left[self.space_object1] = num_obj1_left - (not is_obj1)\n",
+    "                                    new_num_objects_left[self.space_object2] = num_obj2_left - 1\n",
+    "                                    new_boards.extend(self._fill_board_every(board_copy, num_obj1 - 1, new_num_objects_left, i+1))\n",
+    "\n",
+    "                        max_sector = min(i+self.num_sectors+1, len(board)+(i-self.num_sectors))\n",
+    "                        for j in range(i+1, max_sector):\n",
+    "                            if board[j] is None:\n",
+    "                                if not any(k < len(board) and board[k] is self.space_object1 for k in range(j+1, min(j+self.num_sectors+1, board_size))):\n",
+    "                                    options += 1\n",
+    "                                    board_copy = board.copy() \n",
+    "                                    board_copy[i] = self.space_object1\n",
+    "                                    board_copy[j] = self.space_object2\n",
+    "                                    new_num_objects_left[self.space_object1] = num_obj1_left - (not is_obj1)\n",
+    "                                    new_num_objects_left[self.space_object2] = num_obj2_left - 1\n",
+    "                                    new_boards.extend(self._fill_board_every(board_copy, num_obj1 - 1, new_num_objects_left, i+1))\n",
+    "\n",
+    "                    if is_obj1 and options == 0:\n",
+    "                        # Unable to place an obj2 next to an existing obj1\n",
+    "                        return []\n",
+    "                \n",
     "        return new_boards\n",
     " \n",
     "    def fill_board(self, board, num_objects):\n",
@@ -459,7 +452,7 @@
     "                if obj is self.space_object1 or obj is self.space_object2:\n",
     "                    num_objects_left[obj] -= 1\n",
     "                \n",
-    "            return self._fill_board_every(board, num_objects, num_objects_left)\n",
+    "            return self._fill_board_every(board, num_objects[self.space_object1], num_objects_left)\n",
     "            \n",
     "    def affects(self):\n",
     "        if self.qualifier is RuleQualifier.NONE:\n",
@@ -659,8 +652,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "brave-cisco",
+   "execution_count": 19,
+   "id": "previous-ideal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,106 +662,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "latest-bridge",
+   "execution_count": 29,
+   "id": "functional-employer",
    "metadata": {},
    "outputs": [],
    "source": [
-    "b = Board([None, None, SpaceObject.Comet, None, None, None])"
+    "b = Board([None, None, SpaceObject.DwarfPlanet, None, None, None, SpaceObject.BlackHole, SpaceObject.Asteroid, None])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "sticky-worthy",
+   "execution_count": 35,
+   "id": "accomplished-october",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b2 = Board([None, None, None, None])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "maritime-enemy",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<Board AAC--->,\n",
-       " <Board A-CA-->,\n",
-       " <Board A-C-A->,\n",
-       " <Board A-CC-A>,\n",
-       " <Board A-C-CA>,\n",
-       " <Board ACC--A>,\n",
-       " <Board -ACA-->,\n",
-       " <Board -AC-A->,\n",
-       " <Board -AC-CA>,\n",
-       " <Board CAC--A>,\n",
-       " <Board --CAA->,\n",
-       " <Board C-CA-A>,\n",
-       " <Board -CCA-A>,\n",
-       " <Board --CCAA>,\n",
-       " <Board C-C-AA>,\n",
-       " <Board -CC-AA>]"
+       "[<Board AAC->,\n",
+       " <Board A-CA>,\n",
+       " <Board AA-C>,\n",
+       " <Board A-AC>,\n",
+       " <Board ACA->,\n",
+       " <Board AC-A>,\n",
+       " <Board -AAC>,\n",
+       " <Board CAA->,\n",
+       " <Board CA-A>,\n",
+       " <Board -ACA>,\n",
+       " <Board C-AA>,\n",
+       " <Board -CAA>]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "w.fill_board(b, {SpaceObject.Asteroid: 2, SpaceObject.Comet: 2})"
+    "w.fill_board(b2, {SpaceObject.Asteroid: 2, SpaceObject.Comet: 2})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "ahead-earth",
+   "execution_count": 37,
+   "id": "comprehensive-electric",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import timeit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "outside-music",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-13-ef17adbc7159>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-ef17adbc7159>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    self[ii] for ii in range(*i.indices(len(self))\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "data": {
+      "text/plain": [
+       "1.4455252280000082"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Baseline: 1.0\n",
+    "timeit.timeit(\"w.fill_board(b, {SpaceObject.Asteroid: 2, SpaceObject.Comet: 2})\", number=5000, globals=globals())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "indoor-politics",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test():\n",
+    "    for i in range(3000):\n",
+    "        w.fill_board(b, {SpaceObject.Asteroid: 2, SpaceObject.Comet: 2})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "quick-emperor",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         6822004 function calls (5634004 primitive calls) in 1.872 seconds\n",
+      "\n",
+      "   Ordered by: standard name\n",
+      "\n",
+      "   ncalls  tottime  percall  cumtime  percall filename:lineno(function)\n",
+      "        1    0.009    0.009    1.872    1.872 <ipython-input-15-784b053c84ed>:1(test)\n",
+      "111000/3000    0.608    0.000    1.840    0.001 <ipython-input-9-ed81dcde3e45>:113(_fill_board_every)\n",
+      "    90000    0.023    0.000    0.065    0.000 <ipython-input-9-ed81dcde3e45>:147(<genexpr>)\n",
+      "   102000    0.023    0.000    0.060    0.000 <ipython-input-9-ed81dcde3e45>:159(<genexpr>)\n",
+      "     3000    0.015    0.000    1.861    0.001 <ipython-input-9-ed81dcde3e45>:174(fill_board)\n",
+      "        1    0.000    0.000    1.872    1.872 <string>:1(<module>)\n",
+      "   108000    0.022    0.000    0.022    0.000 board.py:167(__init__)\n",
+      "  1080000    0.184    0.000    0.246    0.000 board.py:184(__len__)\n",
+      "    30000    0.003    0.000    0.003    0.000 board.py:187(__iter__)\n",
+      "   525000    0.210    0.000    0.616    0.000 board.py:191(__getitem__)\n",
+      "    57000    0.058    0.000    0.167    0.000 board.py:193(<listcomp>)\n",
+      "   204000    0.061    0.000    0.145    0.000 board.py:198(__setitem__)\n",
+      "   108000    0.057    0.000    0.150    0.000 board.py:215(copy)\n",
+      "   108000    0.045    0.000    0.072    0.000 copy.py:66(copy)\n",
+      "   453000    0.098    0.000    0.133    0.000 enum.py:610(__hash__)\n",
+      "   111000    0.034    0.000    0.157    0.000 {built-in method builtins.any}\n",
+      "        1    0.000    0.000    1.872    1.872 {built-in method builtins.exec}\n",
+      "   453000    0.035    0.000    0.035    0.000 {built-in method builtins.hash}\n",
+      "   525000    0.054    0.000    0.054    0.000 {built-in method builtins.isinstance}\n",
+      "2160000/1080000    0.247    0.000    0.431    0.000 {built-in method builtins.len}\n",
+      "    39000    0.009    0.000    0.009    0.000 {built-in method builtins.max}\n",
+      "   117000    0.026    0.000    0.026    0.000 {built-in method builtins.min}\n",
+      "   114000    0.016    0.000    0.016    0.000 {method 'copy' of 'dict' objects}\n",
+      "   108000    0.015    0.000    0.015    0.000 {method 'copy' of 'list' objects}\n",
+      "        1    0.000    0.000    0.000    0.000 {method 'disable' of '_lsprof.Profiler' objects}\n",
+      "   108000    0.010    0.000    0.010    0.000 {method 'extend' of 'list' objects}\n",
+      "   108000    0.012    0.000    0.012    0.000 {method 'get' of 'dict' objects}\n",
+      "\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "self[ii] for ii in range(*i.indices(len(self))"
+    "import cProfile\n",
+    "import re\n",
+    "cProfile.run('test()')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "indirect-shark",
+   "execution_count": 17,
+   "id": "sustained-canadian",
    "metadata": {},
    "outputs": [],
    "source": [
-    "slice(1-2,1+2,1).start"
+    "#0.673 for copy, 0.489 for calc num objects"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "equivalent-broadcast",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "None or 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "alone-sustainability",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "help(slice)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "champion-ghost",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
