AdajcentSelf working but slow

--- a/Permutation Exploration.ipynb
+++ b/Permutation Exploration.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "competitive-mistake",
+   "id": "unauthorized-colombia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1117,7 +1117,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "martial-prescription",
+   "id": "korean-andorra",
    "metadata": {},
    "outputs": [
     {
@@ -1138,7 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "impossible-encounter",
+   "id": "continent-termination",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1174,7 +1174,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "associate-seattle",
+   "id": "fabulous-spank",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1234,7 +1234,7 @@
   {
    "cell_type": "code",
    "execution_count": 289,
-   "id": "prompt-consideration",
+   "id": "statewide-terrorist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1259,7 +1259,7 @@
   {
    "cell_type": "code",
    "execution_count": 546,
-   "id": "painted-document",
+   "id": "historic-twenty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1270,7 +1270,7 @@
   {
    "cell_type": "code",
    "execution_count": 547,
-   "id": "consecutive-buyer",
+   "id": "synthetic-assist",
    "metadata": {},
    "outputs": [
     {
@@ -1291,7 +1291,7 @@
   {
    "cell_type": "code",
    "execution_count": 552,
-   "id": "sunrise-hundred",
+   "id": "fixed-commitment",
    "metadata": {
     "scrolled": true
    },
@@ -1314,7 +1314,7 @@
   {
    "cell_type": "code",
    "execution_count": 536,
-   "id": "straight-liberal",
+   "id": "elementary-louis",
    "metadata": {},
    "outputs": [
     {
@@ -1338,7 +1338,7 @@
   {
    "cell_type": "code",
    "execution_count": 537,
-   "id": "turned-resolution",
+   "id": "rocky-symphony",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1355,7 +1355,7 @@
   {
    "cell_type": "code",
    "execution_count": 538,
-   "id": "peripheral-zoning",
+   "id": "injured-sally",
    "metadata": {},
    "outputs": [
     {
@@ -1376,7 +1376,7 @@
   {
    "cell_type": "code",
    "execution_count": 544,
-   "id": "proper-brazil",
+   "id": "expected-battery",
    "metadata": {},
    "outputs": [
     {
@@ -1397,7 +1397,7 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "velvet-saying",
+   "id": "olive-commerce",
    "metadata": {},
    "outputs": [
     {
@@ -1418,7 +1418,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "conceptual-mortgage",
+   "id": "abroad-gravity",
    "metadata": {},
    "outputs": [
     {
@@ -1439,7 +1439,7 @@
   {
    "cell_type": "code",
    "execution_count": 719,
-   "id": "together-moses",
+   "id": "relevant-shoot",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1498,7 +1498,7 @@
   {
    "cell_type": "code",
    "execution_count": 720,
-   "id": "annual-intersection",
+   "id": "faced-wisconsin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1533,7 +1533,7 @@
   {
    "cell_type": "code",
    "execution_count": 721,
-   "id": "vulnerable-yahoo",
+   "id": "bibliographic-identity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1543,7 +1543,7 @@
   {
    "cell_type": "code",
    "execution_count": 722,
-   "id": "heated-miniature",
+   "id": "activated-healing",
    "metadata": {},
    "outputs": [
     {
@@ -1569,7 +1569,7 @@
   {
    "cell_type": "code",
    "execution_count": 723,
-   "id": "medium-prefix",
+   "id": "fifteen-repository",
    "metadata": {},
    "outputs": [
     {
@@ -1595,7 +1595,7 @@
   {
    "cell_type": "code",
    "execution_count": 724,
-   "id": "breathing-rogers",
+   "id": "soviet-chair",
    "metadata": {},
    "outputs": [
     {
@@ -1616,7 +1616,7 @@
   {
    "cell_type": "code",
    "execution_count": 729,
-   "id": "fitted-athletics",
+   "id": "cooked-joshua",
    "metadata": {},
    "outputs": [
     {
@@ -1637,7 +1637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "finite-desire",
+   "id": "functional-british",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1655,8 +1655,174 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 758,
+   "id": "fabulous-applicant",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _fill_no_self_touch(lst, is_hole):\n",
+    "    if len(lst) == 0:\n",
+    "        if all(is_hole):\n",
+    "            yield [None]*len(is_hole)\n",
+    "        return\n",
+    "    else:\n",
+    "        if is_hole[0]:\n",
+    "            for p in _fill_no_self_touch(lst, is_hole[1:]):\n",
+    "                yield [None] + p\n",
+    "        else:\n",
+    "            for i in range(len(lst)):\n",
+    "                if i == 0 or lst[i] != lst[i-1]:\n",
+    "                    rest = lst[:i] + lst[i+1:]\n",
+    "                    for p in _fill_no_self_touch(rest, is_hole[1:]):\n",
+    "                        if len(p) == 0 or p[0] != lst[i] or p[0] is None or lst[i] is None:\n",
+    "                            yield [lst[i]] + p\n",
+    "\n",
+    "def fill_no_self_touch(obj, num_obj, board):\n",
+    "    is_hole = [o is not None and board[i-1] is None for i, o in enumerate(board)]\n",
+    "    is_hole_collapsed = [hole_val for i, hole_val in enumerate(is_hole) if hole_val or board[i] is None]\n",
+    "    holes = sum(is_hole)\n",
+    "    empty = len([o for o in board if o is None]) - num_obj\n",
+    "    gaps = holes + empty\n",
+    "    \n",
+    "    if num_obj > gaps:\n",
+    "        return []\n",
+    "    else:\n",
+    "        lst = []\n",
+    "        for i in range(num_obj):\n",
+    "            lst.append(obj)\n",
+    "        for i in range(empty):\n",
+    "            lst.append(None)\n",
+    "                    \n",
+    "        for p in _fill_no_self_touch(lst, is_hole_collapsed):\n",
+    "            if p[0] != p[-1] or p[0] is None or p[-1] is None or p[0] != obj or p[-1] != obj:\n",
+    "                board_copy = board.copy()\n",
+    "                j = 0\n",
+    "                for i in range(len(board_copy)):\n",
+    "                    if board[i] is None:\n",
+    "                        board_copy[i] = p[j]\n",
+    "                        j += 1\n",
+    "                    elif board[i-1] is None:\n",
+    "                        j += 1\n",
+    "                yield board_copy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 770,
+   "id": "postal-tongue",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _fill_no_self_touch(prev, holes, obj, num_obj, num_none, t=0):\n",
+    "    if num_obj == 0 and num_none == 0:\n",
+    "        if all(holes):\n",
+    "            if len(holes) == 0 or \\\n",
+    "            (holes[0][0] != prev or holes[0][0] != obj or prev != obj):\n",
+    "                yield [None]*len(holes)\n",
+    "        return\n",
+    "    else:\n",
+    "        if holes[0] and (holes[0][0] != prev or holes[0][0] != obj or prev != obj):\n",
+    "            for p in _fill_no_self_touch(holes[0][-1], holes[1:], obj, num_obj, num_none, t+1):\n",
+    "                yield [None] + p\n",
+    "        else:\n",
+    "            if num_obj > 0 and obj != prev:\n",
+    "                for p in _fill_no_self_touch(obj, holes[1:], obj, num_obj - 1, num_none, t+1):\n",
+    "                    yield [obj] + p\n",
+    "            if num_none > 0:\n",
+    "                for p in _fill_no_self_touch(None, holes[1:], obj, num_obj, num_none - 1, t+1):\n",
+    "                    yield [None] + p\n",
+    "\n",
+    "def fill_no_self_touch(obj, num_obj, board):\n",
+    "    holes = []\n",
+    "    in_hole = False\n",
+    "    for o in board:\n",
+    "        if o is None:\n",
+    "            holes.append(False)\n",
+    "            in_hole = False\n",
+    "        elif in_hole:\n",
+    "            holes[-1] += (o,)\n",
+    "        else:\n",
+    "            in_hole = True\n",
+    "            holes.append((o,))\n",
+    "                        \n",
+    "    num_holes = len([val for val in holes if val != False])\n",
+    "    empty = len([o for o in board if o is None]) - num_obj\n",
+    "    gaps = num_holes + empty\n",
+    "    \n",
+    "    if num_obj > gaps:\n",
+    "        return []\n",
+    "    else:                     \n",
+    "        for p in _fill_no_self_touch(None, holes, obj, num_obj, empty):\n",
+    "            if p[0] != p[-1] or p[0] != obj or p[-1] != obj:\n",
+    "                if holes[-1] == False or holes[0] != False or p[0] != holes[-1][-1] \\\n",
+    "                or p[0] != obj or holes[-1][-1] != obj:\n",
+    "                    board_copy = board.copy()\n",
+    "                    j = 0\n",
+    "                    for i in range(len(board_copy)):\n",
+    "                        if board[i] is None:\n",
+    "                            board_copy[i] = p[j]\n",
+    "                            j += 1\n",
+    "                        elif board[i-1] is None:\n",
+    "                            j += 1\n",
+    "                    yield board_copy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 782,
+   "id": "responsible-washer",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = Board([None, None, None, None, None, \"A\", \"B\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 783,
+   "id": "searching-breed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<Board A-A--AB>, <Board A--A-AB>, <Board -A-A-AB>]"
+      ]
+     },
+     "execution_count": 783,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(fill_no_self_touch(\"A\", 2, b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 743,
+   "id": "underlying-satisfaction",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.17030155699467286"
+      ]
+     },
+     "execution_count": 743,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "timeit.timeit(\"list(fill_no_self_touch('A', 2, b))\", number=1000, globals=globals())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "duplicate-drill",
+   "id": "extra-sheet",
    "metadata": {},
    "outputs": [],
    "source": []
