Fix adjacent self

--- a/Constraint-Rule Unification.ipynb
+++ b/Constraint-Rule Unification.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 325,
    "id": "better-suite",
    "metadata": {},
    "outputs": [],
@@ -374,18 +374,16 @@
     "        \n",
     "        return new_boards\n",
     "    \n",
-    "    def _prepare_board(self, board, num_obj, start_i=None):\n",
+    "    def _prepare_board(self, board, num_obj, lone, run_backwards, start_i=None):\n",
     "        if start_i is None:\n",
     "            start_i = len(board) - 1\n",
-    "            \n",
-    "        if self.is_satisfied(board):\n",
-    "            return [ (num_obj, board) ]\n",
     "        \n",
-    "        if num_obj == 0 or start_i <= 0:\n",
-    "            if self.is_satisfied(board):\n",
-    "                return [ (num_obj, board) ]\n",
-    "            else:\n",
-    "                return []\n",
+    "        board_ready = len(lone) == 0 and len(run_backwards) == 0\n",
+    "        if board_ready:\n",
+    "            return [ (num_obj, board) ]\n",
+    "\n",
+    "        if start_i <= 0:\n",
+    "            return []\n",
     "        \n",
     "        new_boards = []\n",
     "        for i in range(start_i, -1, -1):\n",
@@ -395,9 +393,14 @@
     "                    if board[i+1] is None and board[i+2] is not self.space_object:\n",
     "                        board_copy = board.copy()\n",
     "                        board_copy[i+1] = self.space_object\n",
-    "                        new_boards.extend(self._prepare_board(board_copy, num_obj - 1, i-1))\n",
+    "                        new_lone = lone - {i}\n",
+    "                        new_boards.extend(self._prepare_board(board_copy, num_obj - 1, new_lone, run_backwards, i-1))\n",
     "                        \n",
     "                if board[i-1] is None:\n",
+    "                    new_run_backwards = run_backwards - { i }\n",
+    "                    if board[i+1] is self.space_object:\n",
+    "                        new_boards.extend(self._prepare_board(board.copy(), num_obj, lone, new_run_backwards, i-1))\n",
+    "                        \n",
     "                    num_left = num_obj\n",
     "                    j = i - 1\n",
     "                    board_copy = board.copy()\n",
@@ -405,7 +408,8 @@
     "                        if board[j] is None:\n",
     "                            board_copy[j] = self.space_object\n",
     "                            num_left -= 1\n",
-    "                            new_boards.extend(self._prepare_board(board_copy, num_left, j-1))\n",
+    "                            new_lone = lone - { j - 1 % len(board) }\n",
+    "                            new_boards.extend(self._prepare_board(board_copy, num_left, new_lone, new_run_backwards, j-1))\n",
     "                            board_copy = board_copy.copy()\n",
     "                            j -= 1\n",
     "                        elif board[j] is self.space_object:\n",
@@ -417,8 +421,11 @@
     "                        \n",
     "    def _fill_board_every(self, board, num_objects):\n",
     "        num_left = num_objects[self.space_object] - sum(obj is self.space_object for obj in board)\n",
-    "        boards = self._prepare_board(board, num_left)\n",
-    "        print(boards)\n",
+    "        lone = set(i for i, obj in enumerate(board) if obj is self.space_object\n",
+    "                and board[i-1] is not self.space_object and board[i+1] is not self.space_object)\n",
+    "        run_backwards = set(i for i, obj in enumerate(board) if obj is self.space_object\n",
+    "                           and board[i-1] is None)\n",
+    "        boards = self._prepare_board(board, num_left, lone, run_backwards)\n",
     "        new_boards = []\n",
     "        for num_obj, board in boards:\n",
     "            new_boards.extend(self._fill_board_runs(board, num_obj))\n",
@@ -453,9 +460,11 @@
     "        return [ self.space_object ]\n",
     "    \n",
     "    @classmethod\n",
-    "    def generate_rule(cls, board, space_object):\n",
-    "        # Their original rules already limit this significantly, would be redundant\n",
-    "        if space_object is SpaceObject.Comet or space_object is SpaceObject.Asteroid:\n",
+    "    def generate_rule(cls, board, constraints, space_object):\n",
+    "        # Some constraints already limit this significantly and would be redundant\n",
+    "        if any((isinstance(constraint, cls) and constraint == cls(space_object, constraint.qualifier))\n",
+    "               or (isinstance(constraint, SectorRule) and constraint.space_object == space_object) \n",
+    "               for constraint in constraints):\n",
     "            return None\n",
     "        \n",
     "        num_obj = board.num_objects()[space_object]\n",
@@ -512,18 +521,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
-   "id": "integral-lecture",
+   "execution_count": 326,
+   "id": "vanilla-canadian",
    "metadata": {},
    "outputs": [],
    "source": [
-    "b = Board([None, SpaceObject.Asteroid, None, SpaceObject.Asteroid, None, None, None, None])"
+    "b = Board([SpaceObject.Asteroid, SpaceObject.Asteroid, None, SpaceObject.Asteroid, SpaceObject.Asteroid, None, None, None, None])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
-   "id": "coordinated-reference",
+   "execution_count": 327,
+   "id": "bound-forest",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,42 +541,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
-   "id": "surprising-merchandise",
+   "execution_count": 328,
+   "id": "banner-infrastructure",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Forwards -A-A---- 3 -A-AA---\n",
-      "Backwards -A-AA--- 0 0 1 AA-AA---\n",
-      "Backwards -A-A---- 2 1 3 -AAA----\n",
-      "Backwards -A-A---- 0 0 3 AAAA----\n",
-      "Backwards -A-A---- 0 1 1 AA-A----\n",
-      "Backwards -A-A---- -1 0 1 AA-A---A\n",
-      "[(0, <Board AA-AA--->), (1, <Board -AAA---->), (0, <Board AAAA---->)]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[<Board AA-AA--->, <Board -AAAA--->, <Board AAAA---->]"
+       "[<Board AA-AAAA-->,\n",
+       " <Board AA-AA-AA->,\n",
+       " <Board AA-AAA--A>,\n",
+       " <Board AA-AA--AA>,\n",
+       " <Board AAAAAA--->,\n",
+       " <Board AAAAA---A>]"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 328,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a.fill_board(b, {SpaceObject.Asteroid: 4})"
+    "a.fill_board(b, {SpaceObject.Asteroid: 6})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "central-hebrew",
+   "id": "variable-invention",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "proprietary-administration",
+   "id": "declared-progress",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "authentic-conspiracy",
+   "id": "technological-southeast",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "charming-palestine",
+   "id": "entitled-victory",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -608,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "domestic-month",
+   "id": "unauthorized-enforcement",
    "metadata": {},
    "outputs": [],
    "source": []
